[package]
name = "community_sphere_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.6"
ic-cdk = "0.13.1" # Updated to match the latest compatible version
ic-cdk-macros = "0.9.0" # Ensure this matches ic-cdk version
ic-cdk-timers = "0.7.0" # Assuming this is still a needed dependency
serde = "1.0"